# i2gpt

./: .gitignore  Cargo.toml  README.md  ecosystem.config.js  main.js  package.json
.github/workflows/: build.yml
models/: Modelfile
src/: i2p.rs  main.rs
static/: i2gpt.html
