[package]
name = "i2gpt"
version = "0.2.0-alpha"
edition = "2021"

[dependencies]
ctrlc = "3.4"
env_logger = "0.11.5"
j4-i2p-rs = { path = "j4-i2p-rs", version = "0.3.0-alpha" }
log  = "0.4.0"
reqwest = { version = "0.12.7", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
